Add: new sponsors content & Change: new sponsors texts

--- a/sponsors.html
+++ b/sponsors.html
@@ -51,12 +51,8 @@
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://devk.de/">DEVK Generalagentur Liszczenski</a></p>
-              <p class="description rating">★★★★</p>
               <p>
-                Die DEVK ist ein bundesweit vertretenes Unternehmen und besteht bereits seit über 130 Jahren. Aufgrund
-                der frühen Zusicherung ihrer Unterstützung durch die Generalagentur Liszczenski in Kiel hatten wir
-                schnell eine Grundlage, die uns sehr viel Planungssicherheit gab. Wir freuen uns über die Kooperation
-                und möchten uns vielmals für die finanzielle Unterstützung bedanken!
+              Die DEVK ist ein bundesweit vertretenes Unternehmen in der Versicherungsbranche, das seit über 130 Jahren besteht. Wir sind sehr stolz, die DEVK gemeinsam mit dem ACV schon sehr früh als unseren Hauptsponsor gewonnen zu haben. Durch die großzügige Summe der Generalagentur Liszczenski in Kiel profitierten wir bereits zu Beginn dieser Saison von einer großen Planungssicherheit und können dadurch nicht nur unsere bisherigen Vorhaben umsetzen, sondern auch neue Ideen verwirklichen. Wir freuen uns über die erneute Kooperation und möchten uns vielmals für die fundamentale finanzielle Unterstützung bedanken!
               </p>
             </div>
           </div>
@@ -67,13 +63,8 @@
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://acv.de/">ACV</a></p>
-              <p class="description rating">★★★★</p>
               <p>
-                Der ACV ist mit 430.000 Mitglieder der drittgrößte Mobilitätsclub in ganz Deutschland und wurde 1962
-                von den Kölner DEVK Versicherungen gegründet. Der Automobil-Club Verkehr hat seit der Gründung sein
-                Leistungsspektrum und sein Serviceangebot stetig erweitert, was für jedes Mitglied in allen Aspekten
-                eine Bereicherung darstellt. Daher freuen wir uns sehr, auf die großzügige Unterstützung des ACV zählen
-                zu können. Wir danken vielmals!
+Der ACV ist mit 430.000 Mitgliedern der drittgrößte Mobilitätsclub in ganz Deutschland und wurde 1962 von den Kölner DEVK Versicherungen gegründet. In diesem Jahr unterstützt uns der ACV zusammen mit der DEVK Generalagentur Liszczenski, wofür wir sehr dankbar sind. Für uns ist es essentiell, einen starken Hauptsponsor wie den ACV und die DEVK Versicherungen an unserer Seite zu wissen, um unsere Ziele zu erreichen. Daher schätzen wir uns glücklich, auf die erneute und großzügige Unterstützung des ACV zählen zu können. Wir danken vielmals!
               </p>
             </div>
           </div>
@@ -84,13 +75,8 @@
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://www.cimtt-kiel.de/cimtt/">CIMTT</a></p>
-              <p class="description rating">★★★★★</p>
               <p>
-                Mit der Anbindung zur Fachhochschule Kiel stellt CIMTT ein Institut für CIM-Technologietransfers dar.
-                Durch die Fertigung unserer Chassis‘ mit einem 3D-Lasersinter-Drucker ist es uns möglich, mit einem
-                hochqualitativ gefertigten Fahrzeug an den Start zu gehen. Denn im Vergleich zu unserem schulinternen
-                3D-Drucker ist der SLS-Drucker in der Lage, wesentlich präziser und gewichtssparender zu arbeiten.
-                Aufgrund dessen sind wir für die großzügige Unterstützung im Bereich der Fahrzeugfertigung sehr dankbar!
+              Mit der Anbindung zur Fachhochschule Kiel stellt CIMTT ein Institut für CIM-Technologietransfers dar. Als Partner für den Druck hochqualitativer Fahrzeuge steht CIMTT uns in dieser Saison erneut zur Seite. Denn im Vergleich zu unserem schulinternen 3D-Drucker ist der SLS-Drucker in der Lage, wesentlich präziser und gewichtssparender zu arbeiten. Wir sind sehr froh, CIMTT wiederholt als unseren Partner bezeichnen zu dürfen und mit ihrer Hilfe auf die Leistungen der vergangenen Saison aufbauen zu können.
               </p>
             </div>
           </div>
@@ -102,27 +88,20 @@
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://www.oerlikon.com/">Oerlikon</a></p>
-              <p class="description rating">★★★★★</p>
               <p>
-                Der Hightech-Industriekonzern „Oerlikon Neumag“, der eine Zweigniederlassung des Global Players
-                „Oerlikon GmbH &amp; Co. KG“ mit einem Fokus auf Maschinen- und Anlagenbau darstellt, unterstützt uns in
-                diesem Jahr durch eine großzügige finanzielle Zuwendung. Somit konnten wir auch gegen Ende dieser Saison
-                das Projekt ohne finanzielle Sorgen verwirklichen. Wir sind sehr froh, dass wir diesen Konzern als
-                unseren Sponsor gewinnen konnten und schätzen uns sehr glücklich, dass sie trotz der aktuellen
-                Coronalage bereit waren, uns zur Seite zu stehen!
+              Der Hightech-Industriekonzern „Oerlikon Neumag“, der eine Zweigniederlassung des Global Players „Oerlikon GmbH & Co. KG“ mit einem Fokus auf Maschinen- und Anlagenbau darstellt, unterstützt uns in diesem Jahr erneut durch eine großzügige finanzielle Zuwendung. Wir sind erfreut, dass Oerlikon Neumag uns erneut unter die Arme greift und bedanken uns für die Sicherheit und die finanziellen Freiheiten, welche uns hierdurch gespendet werden.
               </p>
             </div>
           </div>
         </div>
         <a class="anchor" id="foersterit"></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/oerlikon.gif');"></div>
+          <div class="image" style="background-image: url('./assets/sponsors/foersterit.png');"></div>
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://www.oerlikon.com/">Förster IT</a></p>
-              <p class="description rating">★★★★★</p>
               <p>
-                foerster
+              Seit seiner Gründung 2004 ist das IT-Unternehmen „Förster-IT“ Anlaufstelle für IT-Systeme aller Art, unabhängig ob Steuerkanzlei, oder Betrieb. Wir sind erfreut über Förster-ITs frühe finanzielle Unterstützung in dieser Saison, die ebenfalls einen wichtigen Aspekt bei der realisierung unserer Ziele darstellt.
               </p>
             </div>
           </div>
@@ -134,28 +113,8 @@
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="http://tischlerei-lenker.de/">Tischlerei Lenker</a></p>
-              <p class="description rating">★★★★★</p>
               <p>
-                Ein weiterer regionaler Partner ist die Tischlerei Lenker in Nortorf. Seit 1996 fertigt sie qualitativ,
-                zuverlässig und vielseitig, wovon wir bei der Produktion unseres Teamstandes sehr profitiert haben.
-                Dadurch konnten wir alle unsere Wünsche und Vorstellungen bei der Gestaltung unseres Teamstandes perfekt
-                umsetzen. Wir bedanken uns für die lehrreiche und unkomplizierte Zusammenarbeit!
-              </p>
-            </div>
-          </div>
-        </div>
-        <a class="anchor" id="kopierserviceschmidt"></a>
-        <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/kopierserviceschmidt.png');"></div>
-          <div class="card-spacer">
-            <div class="about">
-              <p class="name"><a class="sponsor" href="https://kopierservice-schmidt.de/">Kopierservice Schmidt</a></p>
-              <p class="description rating">★★★★</p>
-              <p>
-                Der Kopierservice Schmidt ist seit über 30 Jahren ein Dienstleister für Druck, Textildruck, Foto- und
-                Farbkopien, Bindungen und Großformat in Neumünster. Das macht sie zu einem vielseitigen Betrieb, der die
-                Teams unserer Schule seit Jahren durch den Druck unserer T-Shirts sowie des Portfolios unterstützt.
-                Daher freuen wir uns auf die künftige Zusammenarbeit!
+              Ein weiterer regionaler Partner ist die Tischlerei Lenker in Nortorf. Seit 1996 fertigt sie qualitativ, zuverlässig und vielseitig, wovon wir bei der Produktion unseres Teamstandes wiederholt profitieren durften. Dadurch konnten wir alle unsere Wünsche und Vorstellungen bei der Gestaltung unseres Teamstandes perfekt umsetzen. Wir bedanken uns für die erneut lehrreiche und unkomplizierte Zusammenarbeit!
               </p>
             </div>
           </div>
@@ -167,34 +126,41 @@
             <div class="about">
               <p class="name"><a class="sponsor" href="https://www.gisma-connectors.de/">GISMA Steckverbinder GmbH</a>
               </p>
-              <p class="description rating">★★★</p>
               <p>
-                Die GISMA Steckverbinder GmbH gehört zu den drei Marktführern bei der Herstellung von
-                Unterwassersteckverbindern und ist ein unabhängiges, inhabergeführtes Unternehmen in Neumünster. Wir
-                sind erfreut, dass GISMA uns, wie auch viele vorherige Teams unserer Schule, bei der Fertigung unserer
-                Teflonhülsen unterstützt, und uns jederzeit mit Rat und Tat zur Seite steht. Wir sind stolz, GISMA als
-                regionalen Partner mit stets freundlicher und persönlicher Kommunikation an unserer Seite zu wissen.
+              Zu den drei Marktführern bei der Herstellung von Unterwassersteckverbindern zählt die GISMA Steckverbinder GmbH, die ein unabhängiges, inhabergeführtes Unternehmen in Neumünster ist. Wir sind erfreut, dass GISMA uns, wie auch viele vorherige Teams unserer Schule, bei der Fertigung unserer Räder und Teflonhülsen unterstützt, und uns jederzeit mit Rat und Tat zur Seite steht. Wir sind stolz, GISMA als regionalen Partner mit stets freundlicher und persönlicher Kommunikation auch in unserer zweiten Saison an unserer Seite zu wissen.
               </p>
             </div>
           </div>
         </div>
-        <a class="anchor" id=""></a>
+        <a class="anchor" id="kopierserviceschmidt"></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/gisma.png');"></div>
+          <div class="image" style="background-image: url('./assets/sponsors/kopierserviceschmidt.png');"></div>
           <div class="card-spacer">
             <div class="about">
-              <p class="name"><a class="sponsor" href="https://www.gisma-connectors.de/">Studio Lichtschmiede</a>
-              </p>
-              <p class="description rating">★★★</p>
+              <p class="name"><a class="sponsor" href="https://kopierservice-schmidt.de/">Kopierservice Schmidt</a></p>
               <p>
-                Foto
+              Kopierservice Schmidt ist seit 1986 der Ansprechpartner in Neumünster für Druck- und Kopierdienste nahezu aller Art. Wir sind dankbar dafür, dass Kopierservice Schmidt uns auch diese Saison durch den Druck von Plakaten und vielem mehr unterstützt, da dies einen integralen Teil unserer Außendarstellung ausmacht.
               </p>
             </div>
+          </div>
+        </div>
+      <!--
+      <h3>Partner</h3>
+      <a class="anchor" id="studiolichtschmiede"></a>
+      <div class="card">
+        <div class="image" style="background-image: url('./assets/sponsors/studiolichtschmiede.png');"></div>
+        <div class="card-spacer">
+          <div class="about">
+            <p class="name"><a class="sponsor" href="https://www.gisma-connectors.de/">Studio Lichtschmiede</a>
+            </p>
+            <p>
+              Foto
+            </p>
           </div>
         </div>
       </div>
+    -->
     </section>
-    <!-- Partner: asd -->
   </main>
   <footer>
     <div class="small-print-wrapper">
