Add: Vinique content

--- a/vinique.html
+++ b/vinique.html
@@ -43,7 +43,7 @@
   </nav>
   <main>
     <section>
-      <h2>Einleitung</h2>
+      <h2>Vinique</h2>
       <p>
         Es ist besonders, es ist einzigartig, es ist Vinique.
         Das Wort Vinique setzt sich aus unserem Teamnamen „Vicito“ und dem englischen Wort „unique“, was „einzigartig“ bedeutet, zusammen.
@@ -54,7 +54,7 @@
       <h2>Grundsätze</h2>
       <div class="principle-wrapper">
         <div class="principle">
-          <img src="assets/principles/four.svg">
+          <img src="assets/principles/four.svg" style="width: 70px">
           <p>respektvoller Umgang</p>
         </div>
         <div class="principle">
@@ -82,9 +82,29 @@
     <section>
       <h2>MINT</h2>
       <p>
-        In unserem MINT-Bereich haben wir beschlossen, Schülerinnen und Schüler unserer Schule über den Wettbewerb
-        „Formel 1 in der Schule“ zu informieren und zu motivieren, selbst teilzunehmen.
-        Dazu haben wir mehrere Aktionen gestartet, um die nachfolgenden Jahrgänge zu unserem Projekt zu animieren.
+        In Sachen MINT setzten wir uns als Ziel, unsere Mitschülerinnen und Mitschüler über den Wettbewerb „Formel 1 in der Schule“ zu informieren und Motivation und Begeisterung zu regen, selbst teilzunehmen.
+      </p>
+      <h3>MINT-Event</h2>
+      <p>
+        Zu Anfang haben wir ein MINT-Event veranstaltet, bei welchem wir Schüler unserer Schule in die Mensa eingeladen haben, in der wir mehrere Stationen mit einigen interaktiven Elementen aufgebaut hatten.
+        Von der Rennbahn, über unseren Teamstand, bis zu unseren einzelnen Prototypen waren viele Aspekte unserer Arbeit vertreten.
+        Durch dieses Event konnten wir einige von diesem Projekt begeistern und sogar dazu überzeugen am Wettbewerb teilzunehmen.
+        <div class="image-wrapper">
+          <img src="assets/mint1.jpg" alt="MINT-Event Teamstand">
+          <img src="assets/mint3.jpg" alt="MINT-Event Bahn">
+          <img src="assets/mint2.jpg" alt="MINT-Event Fahrzeugpräsentation">
+        </div>
+      </p>
+      <h3>Touchscreen</h2>
+      <p>
+        Damit all unsere Mitschülerinnen und Mitschüler eine weitere Möglichkeit haben, sich über unsere Arbeit und den Wettbewerb zu informieren, befindet sich ein Touchscreen in unserer Pausenhalle.
+        Auf diesem Touchscreen bieten wir einen Einblick auf unsere Website und Informationen zum Wettbewerb, damit unsere Mitschülerinnen und Mitschüler einen ersten Eindruck von unserem Team und dem Wettbewerb erhalten, insofern sie nicht bei dem MINT-Event dabei waren.
+      </p>
+      <h3>Social Media</h2>
+      <p>
+        Egal ob Business, Sportverein, oder Wettkampfteams, Social Media ist heutzutage in nahezu allen Bereichen ein wichtiger Faktor, da es kaum eine bessere Option gibt, sich selbst zu repräsentieren.
+        Deshalb haben wir uns entschieden, mithilfe von Social Media gerade den MINT-Bereich darzustellen.
+        Unser Fokus lag hierbei auf Instagram und TikTok, weil hiermit vor allem die jüngere Generation erreicht werden kann, der wir mithilfe der Beiträge zeigen möchten, wie der Wettbewerb und die Vorbereitung auf diesen verläuft.
       </p>
     </section>
   </main>
