Remove: Old code

--- a/vehicles.html
+++ b/vehicles.html
@@ -52,21 +52,12 @@
       <div class="filter-wrapper">
         <input class="filter" type="checkbox" data-label="Hauptmodelle">
         <input class="filter" type="checkbox" data-label="Untermodelle" checked="false">
+        <!-- TODO: Räder einfügen -->
         <!-- <input class="filter" type="checkbox" data-label="Räder" checked="false"> -->
         <input class="filter" type="checkbox" data-label="Spitznamen" checked="false">
       </div>
     </section>
     <section id="list">
-      <!-- TODO: dynamisches anpassen der div container für interaktives lesen
-      <div class="vehicle">
-        <img src="assets/renders/f.png">
-        <div class="info">
-          <p class="name">Finales Fahrzeug</p>
-          <p class="actions"><a href="#">Technische Genauigkeiten</a><a href="model.html?v=f">3D-Modell</a></p>
-          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quis expedita ullam excepturi? Officia expedita odio facilis veritatis ipsa ratione.</p>
-        </div>
-      </div>
-      -->
       <div class="vehicle primary">
         <img src="assets/renders/p1.png">
         <div class="info">
