--- a/vinique.html
+++ b/vinique.html
@@ -15,7 +15,6 @@
   <meta name="og:image" content="assets/social/vicito.png">
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/card.css">
   <link rel="stylesheet" href="styles/vinique.css">
   <script src="scripts/index.js" defer></script>
 </head>
@@ -90,9 +89,9 @@
         Von der Rennbahn, über unseren Teamstand, bis zu unseren einzelnen Prototypen waren viele Aspekte unserer Arbeit vertreten.
         Durch dieses Event konnten wir einige von diesem Projekt begeistern und sogar dazu überzeugen am Wettbewerb teilzunehmen.
         <div class="image-wrapper">
-          <img src="assets/mint1.jpg" alt="MINT-Event Teamstand">
-          <img src="assets/mint3.jpg" alt="MINT-Event Bahn">
-          <img src="assets/mint2.jpg" alt="MINT-Event Fahrzeugpräsentation">
+          <img class="outer-mint-image" src="assets/mint-event-1.jpg" alt="MINT-Event Teamstand">
+          <img class="inner-mint-image" src="assets/mint-event-2.jpg" alt="MINT-Event Bahn">
+          <img class="outer-mint-image" src="assets/mint-event-3.jpg" alt="MINT-Event Fahrzeugpräsentation">
         </div>
       </p>
       <h3>Touchscreen</h2>
