Fix: Image size & accessibility

--- a/sponsors.html
+++ b/sponsors.html
@@ -47,7 +47,7 @@
         <h3>Hauptsponsoren</h3>
         <a class="anchor" id="devk"></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/devk.jpg');"></div>
+          <img class="image sponsor" src="./assets/sponsors/devk.jpg">
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://devk.de/">DEVK Generalagentur Liszczenski</a></p>
@@ -59,7 +59,7 @@
         </div>
         <a class="anchor" id="acv"></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/acv.png');"></div>
+          <img class="image sponsor" src="./assets/sponsors/acv.png">
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://acv.de/">ACV</a></p>
@@ -71,7 +71,7 @@ Der ACV ist mit 430.000 Mitgliedern der drittgrößte Mobilitätsclub in ganz De
         </div>
         <a class="anchor" id="cimtt"></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/cimtt.png');"></div>
+          <img class="image sponsor" src="./assets/sponsors/cimtt.png">
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://www.cimtt-kiel.de/cimtt/">CIMTT</a></p>
@@ -84,7 +84,7 @@ Der ACV ist mit 430.000 Mitgliedern der drittgrößte Mobilitätsclub in ganz De
         <h3>Finanzsponsoren</h3>
         <a class="anchor" id="oerlikon"></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/oerlikon.gif');"></div>
+          <img class="image sponsor" src="./assets/sponsors/oerlikon.gif">
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://www.oerlikon.com/">Oerlikon</a></p>
@@ -96,10 +96,10 @@ Der ACV ist mit 430.000 Mitgliedern der drittgrößte Mobilitätsclub in ganz De
         </div>
         <a class="anchor" id="foersterit"></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/foersterit.png');"></div>
+          <img class="image sponsor" src="./assets/sponsors/foersterit.png">
           <div class="card-spacer">
             <div class="about">
-              <p class="name"><a class="sponsor" href="https://www.oerlikon.com/">Förster IT</a></p>
+              <p class="name"><a class="sponsor" href="https://www.foerster-it.de/">Förster IT</a></p>
               <p>
               Seit seiner Gründung 2004 ist das IT-Unternehmen „Förster-IT“ Anlaufstelle für IT-Systeme aller Art, unabhängig ob Steuerkanzlei, oder Betrieb. Wir sind erfreut über Förster-ITs frühe finanzielle Unterstützung in dieser Saison, die ebenfalls einen wichtigen Aspekt bei der realisierung unserer Ziele darstellt.
               </p>
@@ -109,7 +109,7 @@ Der ACV ist mit 430.000 Mitgliedern der drittgrößte Mobilitätsclub in ganz De
         <h3>Sachsponsoren</h3>
         <a class="anchor" id="tischlereilenker"></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/tischlereilenker.png');"></div>
+          <img class="image sponsor" src="./assets/sponsors/tischlereilenker.png">
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="http://tischlerei-lenker.de/">Tischlerei Lenker</a></p>
@@ -121,7 +121,7 @@ Der ACV ist mit 430.000 Mitgliedern der drittgrößte Mobilitätsclub in ganz De
         </div>
         <a class="anchor" id="gisma"></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/gisma.png');"></div>
+          <img class="image sponsor" src="./assets/sponsors/gisma.png">
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://www.gisma-connectors.de/">GISMA Steckverbinder GmbH</a>
@@ -134,7 +134,7 @@ Der ACV ist mit 430.000 Mitgliedern der drittgrößte Mobilitätsclub in ganz De
         </div>
         <a class="anchor" id="kopierserviceschmidt"></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/kopierserviceschmidt.png');"></div>
+          <img class="image sponsor" src="./assets/sponsors/kopierserviceschmidt.png">
           <div class="card-spacer">
             <div class="about">
               <p class="name"><a class="sponsor" href="https://kopierservice-schmidt.de/">Kopierservice Schmidt</a></p>
@@ -148,7 +148,7 @@ Der ACV ist mit 430.000 Mitgliedern der drittgrößte Mobilitätsclub in ganz De
       <h3>Partner</h3>
       <a class="anchor" id="studiolichtschmiede"></a>
       <div class="card">
-        <div class="image" style="background-image: url('./assets/sponsors/studiolichtschmiede.png');"></div>
+        <img class="image sponsor" src="./assets/sponsors/studiolichtschmiede.png">
         <div class="card-spacer">
           <div class="about">
             <p class="name"><a class="sponsor" href="https://www.gisma-connectors.de/">Studio Lichtschmiede</a>
