Fix: TikTok link

--- a/sponsors.html
+++ b/sponsors.html
@@ -169,7 +169,7 @@ Der ACV ist mit 430.000 Mitgliedern der drittgrößte Mobilitätsclub in ganz De
     <div class="social-wrapper">
       <a href="https://www.youtube.com/channel/UCtvMswxdWggvel8fwr5pG7g/"><img src="assets/social/youtube.svg"></a>
       <a href="https://www.instagram.com/team.vicito/"><img src="assets/social/instagram.svg"></a>
-      <a href="https://tiktok.com/"><img src="assets/social/tiktok.svg"></a>
+      <a href="https://tiktok.com/@team.vicito/"><img src="assets/social/tiktok.svg"></a>
     </div>
   </footer>
 </body>
