--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="social-wrapper">
       <a href="https://www.youtube.com/channel/UCtvMswxdWggvel8fwr5pG7g/"><img src="assets/social/youtube.svg"></a>
       <a href="https://www.instagram.com/team.vicito/"><img src="assets/social/instagram.svg"></a>
-      <a href="https://tiktok.com/"><img src="assets/social/tiktok.svg"></a>
+      <a href="https://tiktok.com/@team.vicito/"><img src="assets/social/tiktok.svg"></a>
     </div>
   </footer>
 </body>
