--- a/news.html
+++ b/news.html
@@ -45,7 +45,6 @@
       <p>Lesen Sie unsere Artikel, um Einblicke in die Arbeit unseres Teams zu erlangen!<br>Sie können außerdem unseren <a href="rss.xml">RSS-Feed</a> dieser Seite kostenlos abonnieren, um keine Neuigkeit über unser Team zu verpassen!</p>
       <p class="article">- <a href="articles/sponsorennewsletter-mai-2021.html">Sponsorennewsletter Mai 2021!</a></p>
       <p class="article">- <a href="articles/unsere-erste-saison-ist-jetzt-vorbei.html">Unsere erste Saison ist jetzt vorbei!</a></p>
-      <h3>Social-Media</h3>
     </section>
   </main>
   <footer>
@@ -56,7 +55,7 @@
     <div class="social-wrapper">
       <a href="https://www.youtube.com/channel/UCtvMswxdWggvel8fwr5pG7g/"><img src="assets/social/youtube.svg"></a>
       <a href="https://www.instagram.com/team.vicito/"><img src="assets/social/instagram.svg"></a>
-      <a href="https://tiktok.com/"><img src="assets/social/tiktok.svg"></a>
+      <a href="https://tiktok.com/@team.vicito/"><img src="assets/social/tiktok.svg"></a>
     </div>
   </footer>
 </body>
