Change: team.html introcution

--- a/team.html
+++ b/team.html
@@ -43,9 +43,14 @@
     <section>
       <h2>Unser Team</h2>
       <p>
-        Wir sind zurzeit im 11. Jahrgang und haben uns, nachdem unsere Lehrer uns von dem Projekt erzählt und uns damit
-        fasziniert hatten, schnell als Team zusammengefunden. Der Wettbewerb begeistert uns in vielerlei Hinsicht,
-        weshalb wir dazu bereit sind, einen großen Teil unserer Freizeit mit der Arbeit an diesem Projekt zu verbringen.
+        Wir sind zurzeit im 12. Jahrgang und befinden uns als Team bereits in unserer zweiten Saison. Um dieses Jahr
+        noch besser beim Wettbewerb abzuschneiden, haben wir uns auch personell erweitert: Neben Lena, Patrick, Jarno
+        und David, die ihre Rollen im Team behalten haben, gab es Neuzuwachs durch sowohl Thore, der in dieser Saison
+        das Ressourcenmanagement übernimmt, als auch Jandrik, der Patrick durch die Übernahme des Bereichs Produktion
+        entlastet. Auch die beiden Supporterinnen Isabelle, die bereits letztes Jahr Teil des Teams war, und Anna
+        übernehmen ein paar Aufgabenbereiche, damit sich die anderen Teammitglieder möglichst intensiv mit ihren
+        Aufgaben beschäftigen können. Weil der Wettbewerb uns in vielerlei Hinsicht begeistert, sind wir hochmotiviert
+        und verbringen daher einen großen Teil unserer Freizeit mit der Arbeit an diesem Projekt.
       </p>
       <div class="list">
         <a class="anchor" id="lena"></a>
