Add: Vinique & Models

--- a/team.html
+++ b/team.html
@@ -32,6 +32,7 @@
       <a href="team.html">Team</a>
       <a href="vehicles.html">Fahrzeuge</a>
       <a href="sponsors.html">Sponsoren</a>
+      <a href="vinique.html">Vinique</a>
     </div>
     <div class="burger">
       <div class="line1"></div>
@@ -155,6 +156,7 @@
         </div>
       </div>
       </div>
+      <h3>Supporterinnen</h3>
       <a class="anchor" id="anna"></a>
       <div class="card">
         <div class="team image" style="background-image: url('assets/team/anna.png');"></div>
