--- a/model.html
+++ b/model.html
@@ -33,6 +33,7 @@
       <a href="team.html">Team</a>
       <a href="vehicles.html">Fahrzeuge</a>
       <a href="sponsors.html">Sponsoren</a>
+      <a href="vinique.html">Vinique</a>
     </div>
     <div class="burger">
       <div class="line1"></div>
