--- a/news.html
+++ b/news.html
@@ -31,6 +31,7 @@
       <a href="team.html">Team</a>
       <a href="vehicles.html">Fahrzeuge</a>
       <a href="sponsors.html">Sponsoren</a>
+      <a href="vinique.html">Vinique</a>
     </div>
     <div class="burger">
       <div class="line1"></div>
@@ -43,6 +44,9 @@
       <h2>Neues im Team</h2>
       <h3>Artikel</h3>
       <p>Lesen Sie unsere Artikel, um Einblicke in die Arbeit unseres Teams zu erlangen!<br>Sie können außerdem unseren <a href="rss.xml">RSS-Feed</a> dieser Seite kostenlos abonnieren, um keine Neuigkeit über unser Team zu verpassen!</p>
+      <p class="article">- <a href="articles/sponsorennewsletter-märz-2022.html">Sponsorennewsletter März 2022!</a></p>
+      <p class="article">- <a href="articles/sponsorennewsletter-januar-2022.html">Sponsorennewsletter Januar 2022!</a></p>
+      <p class="article">- <a href="articles/sponsorennewsletter-august-2021.html">Sponsorennewsletter August 2021!</a></p>
       <p class="article">- <a href="articles/sponsorennewsletter-mai-2021.html">Sponsorennewsletter Mai 2021!</a></p>
       <p class="article">- <a href="articles/unsere-erste-saison-ist-jetzt-vorbei.html">Unsere erste Saison ist jetzt vorbei!</a></p>
     </section>
