--- a/news.html
+++ b/news.html
@@ -44,7 +44,7 @@
       <h2>Neues im Team</h2>
       <h3>Artikel</h3>
       <p>Lesen Sie unsere Artikel, um Einblicke in die Arbeit unseres Teams zu erlangen!<br>Sie können außerdem unseren <a href="rss.xml">RSS-Feed</a> dieser Seite kostenlos abonnieren, um keine Neuigkeit über unser Team zu verpassen!</p>
-      <p class="article">- <a href="articles/sponsorennewsletter-märz-2022.html">Sponsorennewsletter März 2022!</a></p>
+      <p class="article">- <a href="articles/sponsorennewsletter-maerz-2022.html">Sponsorennewsletter März 2022!</a></p>
       <p class="article">- <a href="articles/sponsorennewsletter-januar-2022.html">Sponsorennewsletter Januar 2022!</a></p>
       <p class="article">- <a href="articles/sponsorennewsletter-august-2021.html">Sponsorennewsletter August 2021!</a></p>
       <p class="article">- <a href="articles/sponsorennewsletter-mai-2021.html">Sponsorennewsletter Mai 2021!</a></p>
