Fix: Vehicle visibility & typo

--- a/vehicles.html
+++ b/vehicles.html
@@ -147,7 +147,7 @@
           <p class="description">Fertiggestellt am 06.07.2021</p>
         </div>
       </a>
-      <a href="model.html?m=f" class="vehicle primary">
+      <a href="#" onclick="alert('Dieses Fahrzeug wird bald veröffentlicht')" class="vehicle primary">
         <img src="assets/renders/f.png">
         <div class="info">
           <p class="name">Finales Fahrzeug</p>
